--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     Hello
     <iframe
-      src="https://preprod.maxstream.tv/embed/67734473595a576f483746356b3068565a7042716d773d3d"
+      src="https://maxstream-qa.ocs.demo.accedo.tv/embed/52486136536d3434384d342b4e57384f6b74653541673d3d"
       style="border:0px #ffffff none;"
       name="myiFrame"
       scrolling="no"
