--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
   <body>
   <header>
   <div class="overlay"></div>
+    <iframe
+      src="https://maxstream-qa.ocs.demo.accedo.tv/embed/52486136536d3434384d342b4e57384f6b74653541673d3d"
+      style="border:0px #ffffff none;"
+      name="myiFrame"
+      scrolling="no"
+      frameborder="1"
+      marginheight="0px"
+      marginwidth="0px"
+      width="200px"
+      height="200px"      
+      allowfullscreen
+    ></iframe>
   <div class="container h-100">
     <div class="d-flex h-100 text-center align-items-center">
       <div class="w-100 text-white">
@@ -15,15 +27,6 @@
   </div>
 </header>
   </body>
-  <iframe
-      src="https://maxstream-qa.ocs.demo.accedo.tv/embed/52486136536d3434384d342b4e57384f6b74653541673d3d"
-      style="border:0px #ffffff none;"
-      name="myiFrame"
-      scrolling="no"
-      frameborder="1"
-      marginheight="0px"
-      marginwidth="0px"
-      allowfullscreen
-    ></iframe>
+  
 </html>
 
